--- a/Lab4/Lab4.vcxproj
+++ b/Lab4/Lab4.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b7b2f910-ed71-46df-8584-2f84e0453725}</ProjectGuid>
     <RootNamespace>Lab4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Lab4_1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
