DONE 5.1. Need to check 5.2 and make 5.3

--- a/Lab5/Lab5.vcxproj
+++ b/Lab5/Lab5.vcxproj
@@ -127,7 +127,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="5_1.asm">
+    <MASM Include="avx.asm" />
+    <MASM Include="factorial.asm" />
+    <MASM Include="pow_avx.asm" />
+    <MASM Include="pow_sse.asm" />
+    <MASM Include="sse.asm">
       <FileType>Document</FileType>
     </MASM>
   </ItemGroup>
