--- a/Lab5/Lab5.vcxproj.filters
+++ b/Lab5/Lab5.vcxproj.filters
@@ -20,7 +20,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="5_1.asm">
+    <MASM Include="sse.asm">
+      <Filter>Исходные файлы</Filter>
+    </MASM>
+    <MASM Include="pow_sse.asm">
+      <Filter>Исходные файлы</Filter>
+    </MASM>
+    <MASM Include="factorial.asm">
+      <Filter>Исходные файлы</Filter>
+    </MASM>
+    <MASM Include="avx.asm">
+      <Filter>Исходные файлы</Filter>
+    </MASM>
+    <MASM Include="pow_avx.asm">
       <Filter>Исходные файлы</Filter>
     </MASM>
   </ItemGroup>
