--- a/Lab5/Lab5.vcxproj.filters
+++ b/Lab5/Lab5.vcxproj.filters
@@ -35,5 +35,8 @@
     <MASM Include="pow_avx.asm">
       <Filter>Исходные файлы</Filter>
     </MASM>
+    <MASM Include="fma.asm">
+      <Filter>Исходные файлы</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
